# free-claude-code

./: .env.example  PLAN.md  README.md  pyproject.toml
api/: dependencies.py
api/web_tools/: request.py
config/: provider_catalog.py  settings.py
core/anthropic/: conversion.py
messaging/: handler.py
providers/: defaults.py  registry.py
providers/deepseek/: __init__.py  client.py  request.py
providers/llamacpp/: client.py
providers/lmstudio/: client.py
providers/nvidia_nim/: __init__.py  client.py
providers/ollama/: __init__.py  client.py
providers/open_router/: __init__.py  client.py
providers/openai_compatible/: __init__.py  client.py  request.py
smoke/: README.md  capabilities.py  features.py
smoke/lib/: config.py  e2e.py
smoke/prereq/: test_provider_prereq_live.py
smoke/product/: test_config_extensibility_product_live.py  test_provider_product_live.py
tests/: conftest.py
tests/contracts/: test_import_boundaries.py
tests/messaging/: test_handler.py  test_handler_integration.py
tests/providers/: test_converter.py  test_deepseek.py  test_nvidia_nim.py  test_openai_compatible.py  test_registry.py
